--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ scratch/
 ###############################################################################
 # Default
 
+*.DS_Store
+
 # Latex Files
 *.aux
 *.blg
@@ -21,5 +23,4 @@ scratch/
 *.out
 *.fls
 *.fdb_latexmk
-
-*.DS_Store
+/macro_paper.log
